--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
     <head>
+        <base href="http://localhost/fumble-mania-web-frontend/app/">
         <meta charset="utf-8">
         <title></title>
         <meta name="description" content="">
@@ -19,7 +20,6 @@
           <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- Add your site or application content here -->
         <div class="header">
             <div class="navbar navbar-default" role="navigation">
                 <div class="container">
@@ -49,7 +49,7 @@
 
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-        <script>
+<!--        <script>
             !function (A, n, g, u, l, a, r) {
                 A.GoogleAnalyticsObject = l, A[l] = A[l] || function () {
                     (A[l].q = A[l].q || []).push(arguments)
@@ -58,7 +58,7 @@
             }(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
             ga('create', 'UA-XXXXX-X');
             ga('send', 'pageview');
-        </script>
+        </script>-->
 
         <!-- build:js(.) scripts/vendor.js -->
         <!-- bower:js -->
