--- a/app/index.html
+++ b/app/index.html
@@ -9,13 +9,14 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <!-- build:css(.) styles/vendor.css -->
         <!-- bower:css -->
+        <link rel="stylesheet" href="../bower_components/materialize/dist/css/materialize.min.css">
+        <link rel="stylesheet" href="../bower_components/angular-materialize/css/style.css">
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css(.tmp) styles/main.css -->
-        <link rel="stylesheet" href="../bower_components/angular-materialize/css/style.css">
-        <link rel="stylesheet" href="../bower_components/materialize/dist/css/materialize.min.css">
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
     <body ng-app="fumbleMania">
         <!--&lt;!&ndash;[if lte IE 8]>-->
