--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,8 @@
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css(.tmp) styles/main.css -->
-        <link rel="stylesheet" href="styles/main.css">
+        <link rel="stylesheet" href="styles/materialize.fix.css">
+        <link rel="stylesheet" href="styles/materialize-toasts.css">
         <!-- endbuild -->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
@@ -23,6 +24,10 @@
           <!--<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>-->
         <!--<![endif]&ndash;&gt;-->
 
+        <!-- Header -->
+        <nav ng-include src="'partials/header.html'"></nav>
+
+        <!-- Main content -->
         <div ng-view="" class="container"></div>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -37,8 +42,10 @@
             ga('send', 'pageview');
         </script>-->
 
+        <script src="scripts/fix/autocomplete.js"></script>
         <!-- build:js(.) scripts/vendor.js -->
         <!-- bower:js -->
+        <script src="../bower_components/jquery/dist/jquery.min.js"></script>
         <script src="../bower_components/lodash/lodash.min.js"></script>
         <script src="../bower_components/angular/angular.min.js"></script>
         <script src="../bower_components/angular-animate/angular-animate.min.js"></script>
@@ -50,16 +57,28 @@
         <script src="../bower_components/angular-jwt/dist/angular-jwt.min.js"></script>
         <script src="../bower_components/restangular/dist/restangular.min.js"></script>
         <script src="../bower_components/ngstorage/ngStorage.min.js"></script>
-        <script src="../bower_components/jquery/dist/jquery.min.js"></script>
         <script src="../bower_components/materialize/dist/js/materialize.min.js"></script>
         <script src="../bower_components/angular-materialize/src/angular-materialize.js"></script>
+        <!--<script src="../bower_components/angular-translate/angular-translate.min.js"></script>-->
         <!-- endbower -->
         <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+
+        <!-- Configuration -->
+        <script src="scripts/config/route.js"></script>
+        <script src="scripts/config/restangular.js"></script>
+        <script src="scripts/config/jwt.js"></script>
+        <script src="scripts/config/firewall.js"></script>
+
+        <!-- Controllers -->
+        <script src="scripts/controllers/security.js"></script>
         <script src="scripts/controllers/dashboard.js"></script>
-        <script src="scripts/controllers/login.js"></script>
+
+        <!-- Services -->
+        <script src="scripts/services/auth-provider.js"></script>
+        <script src="scripts/services/flash-bag.js"></script>
         <!-- endbuild -->
     </body>
 </html>
